<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/network_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/uh_oh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_17dp"
        android:text="@string/uh_oh"
        android:textColor="@color/black333333"
        android:textSize="@dimen/text_size_24sp" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:gravity="center"
        android:text="@string/network_error_message"
        android:textColor="@color/black333333"
        android:textSize="@dimen/text_size_13sp" />

    <TextView
        android:id="@+id/network_retry_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_64dp"
        android:background="@drawable/selector_button_mango"
        android:paddingBottom="@dimen/margin_padding_16dp"
        android:paddingEnd="@dimen/margin_padding_67dp"
        android:paddingStart="@dimen/margin_padding_67dp"
        android:paddingTop="@dimen/margin_padding_16dp"
        android:text="@string/retry"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_13sp"
        android:visibility="visible" />
</LinearLayout>