<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".meeting.ui.activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_15dp"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="#89bcd4"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/startAt"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/createEventStart"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"

                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content">
                <DatePicker
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:layout_weight="4"

                    android:layout_height="wrap_content" />
                <TimePicker
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_weight="4"
                    android:timePickerMode="spinner"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="#dce2e6"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/endAt"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/createEventEnd"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_height="wrap_content">
                <DatePicker
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:layout_height="wrap_content" />
                <TimePicker
                    android:id="@+id/endTime"
                    android:timePickerMode="spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_27dp"
            android:text="@string/description"
            android:textColor="@color/black333333"
            android:textSize="@dimen/text_size_12_5sp" />

        <EditText
            android:id="@+id/edit_text_meeting_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_12dp"
            android:background="@drawable/cvv_bg"
            android:gravity="start"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8.5sp"
            android:minHeight="@dimen/margin_padding_100dp"
            android:padding="@dimen/margin_padding_13dp"
            android:paddingBottom="@dimen/margin_padding_20dp"
            android:textColor="@color/marine"
            android:textSize="@dimen/text_size_15sp"
            android:importantForAutofill="noExcludeDescendants"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/incident_text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_padding_7dp"
            android:textSize="@dimen/text_size_12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_padding_37dp"
            android:paddingEnd="@dimen/margin_padding_62dp"
            android:paddingStart="@dimen/margin_padding_62dp"
            android:layout_marginBottom="@dimen/margin_padding_32dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="#fe9f25"/>
    </LinearLayout>
</ScrollView>